16282_Create_UI_Notificaion

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        <receiver
+            android:name=".utils.NotificationReceiver"
+            android:enabled="true" />
+        <service
+            android:name=".utils.NotificationService"
+            android:enabled="true" />
 
+    </application>
 </manifest>
